added second image and resize logos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <button class="cta-btn">Get Started</button>
       </div>
       <div class="story-image">
-        <img src="assets/story-image1.png" alt="Community illustration (placeholder)" />
+        <img src="assets/BrandmarkMidnightBlack.png" alt="The Gathering Brandmark" />
       </div>
     </div>
   </section>
