edit to texts and product description

--- a/index.html
+++ b/index.html
@@ -9,42 +9,59 @@
 
 <body>
   <!-- ================= HERO SECTION START ================= -->
-  <header id="hero">
-    <div class="hero-content">
-      <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
-      <h1>Work Alone, Together.</h1>
-      <p class="tagline">
-        The Gathering is a global coworking space for independent thinkers, founders, and creators — where focus meets connection.
+<header id="hero">
+  <div class="hero-content">
+    <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
+    <h1>Work Alone, Together.</h1>
+    <p class="tagline">
+      A human-first space designed to help women reconnect with themselves and their potential.<br>
+      <strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.
+    </p>
+    <button class="cta-btn">Join the Waitlist</button>
+    <p class="mini-note">Safe. Supportive. Growth-oriented.</p>
+  </div>
+  <div class="scroll-hint">↓</div>
+</header>
+<!-- ================= HERO SECTION END ================= -->
+
+<!-- ================= STORY SECTION START ================= -->
+<section id="story">
+  <div class="story-inner">
+    <div class="story-text">
+      <h2>Finding your way home — to yourself, with others.</h2>
+
+      <p>
+        <strong>The Gathering</strong> is a one-stop online platform for women seeking balance, purpose and belonging. 
+        Our mission is to empower ambitious, high-performing individuals who often feel anxious, disconnected or overwhelmed —
+        by creating a safe environment where they can <strong>co-work, co-learn and co-live</strong> with others on the same journey.
       </p>
-      <button class="cta-btn">Join the Waitlist</button>
-    </div>
-    <div class="scroll-hint">↓</div>
-  </header>
-  <!-- ================= HERO SECTION END ================= -->
 
+      <p>
+        Inside The Gathering, members will find:
+      </p>
 
-  <!-- ================= STORY SECTION START ================= -->
-  <section id="story">
-    <div class="story-inner">
-      <div class="story-text">
-        <h2>Our Big Idea</h2>
-        <p>
-          We’re building a digital third place — a virtual coworking environment that blends structure,
-          accountability, and human warmth. It’s for anyone seeking balance, progress, and belonging
-          while working on what truly matters.
-        </p>
-        <p>
-          Whether you’re starting a side hustle, studying for your PhD, or creating something new,
-          The Gathering gives you the space and support to stay consistent — without the loneliness.
-        </p>
-        <button class="cta-btn">Get Started</button>
-      </div>
-      <div class="story-image">
-        <img src="assets/BrandmarkMidnightBlack.png" alt="The Gathering Brandmark" />
-      </div>
+      <ul>
+        <li><strong>Caves</strong> — guided virtual co-working sessions led by trained hosts for deep focus and accountability.</li>
+        <li><strong>The Lounge</strong> — a 24-hour drop-in space to stay connected between sessions.</li>
+        <li><strong>Workshops & Bonus Caves</strong> — live themed gatherings for learning and self-care.</li>
+        <li><strong>Resources</strong> — a growing marketplace of templates, prompts, courses and tools.</li>
+        <li><strong>Community Forum & Directory</strong> — to find collaborators, mentors and expert support.</li>
+      </ul>
+
+      <p>
+        At its heart, The Gathering is about <strong>self-compassion through connection</strong> —
+        a digital sanctuary for women to grow, heal and thrive together.
+      </p>
+
+      <button class="cta-btn">Join Our Community</button>
     </div>
-  </section>
-  <!-- ================= STORY SECTION END ================= -->
+
+    <div class="story-image">
+      <img src="assets/BrandmarkMidnightBlack.png" alt="The Gathering Brandmark" />
+    </div>
+  </div>
+</section>
+<!-- ================= STORY SECTION END ================= -->
 
 
   <!-- ================= WAITLIST SECTION START ================= -->
