--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
       <ul>
         <li><strong>Caves</strong> — guided virtual co-working sessions led by trained hosts for deep focus and accountability.</li>
-        <li><strong>The Lounge</strong> — a 24-hour drop-in space to stay connected between sessions.</li>
-        <li><strong>Workshops & Bonus Caves</strong> — live themed gatherings for learning and self-care.</li>
+        <!-- <li><strong>The Lounge</strong> — a 24-hour drop-in space to stay connected between sessions.</li> -->
+        <!-- <li><strong>Workshops & Bonus Caves</strong> — live themed gatherings for learning and self-care.</li> -->
         <li><strong>Resources</strong> — a growing marketplace of templates, prompts, courses and tools.</li>
         <li><strong>Community Forum & Directory</strong> — to find collaborators, mentors and expert support.</li>
       </ul>
@@ -71,7 +71,7 @@
 
       <form id="waitlistForm">
         <div class="question active" data-step="1">
-          <h2>Hi there! What’s your name?</h2>
+          <h2>Join the Waitlist Today!</h2>
           <input type="text" name="name" required />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
