--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
 
       <form id="waitlistForm">
         <div class="question active" data-step="1">
-          <h2>Join the Waitlist Today!</h2>
-          <input type="text" name="name" required />
+          <h2>Join the Waitlist by introducing Yourself!</h2>
+          <input type="text" 
+           name="name" 
+           placeholder="Enter your name"
+           required />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
