Main Page updated keywords

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <header id="hero">
   <div class="hero-content">
     <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
-    <h1>Work Alone, Together.</h1>
+    <h1>It's Time toGather.</h1>
     <p class="tagline">
-      A human-first space designed to help women reconnect with themselves and their potential.<br>
-      <strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.
+      A virtual clubhouse for women to co-work, co-learn and co-live for radical personal growth & healing.<br>
+      <!--<strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.-->
     </p>
     <button class="cta-btn">Join the Waitlist</button>
-    <p class="mini-note">Safe. Supportive. Growth-oriented.</p>
+    <p class="mini-note">Supportive. Growth-oriented. Flexible.</p>
   </div>
   <div class="scroll-hint">↓</div>
 </header>
