--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
     <h1>It's Time toGather.</h1>
     <p class="tagline">
-      A virtual clubhouse for women to co-work, co-learn and co-live for radical personal growth & healing.<br>
+      A virtual clubhouse for women to co-work, co-learn <br> and co-live for radical personal growth & healing.<br>
       <!--<strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.-->
     </p>
     <button class="cta-btn">Join the Waitlist</button>
