--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header id="hero">
   <div class="hero-content">
     <img src="assets/WordmarkLushGreen.png" alt="The Gathering Logo" class="logo" />
-    <h1>It's Time toGather.</h1>
+    <h1>It's Time <italics>toGather.</italics></h1>
     <p class="tagline">
       A virtual clubhouse for women to co-work, co-learn <br> and co-live for radical personal growth & healing.<br>
       <!--<strong>The Gathering</strong> is your digital home — where focus, compassion and community meet.-->
