font change and story section change

--- a/index.html
+++ b/index.html
@@ -24,45 +24,6 @@
 </header>
 <!-- ================= HERO SECTION END ================= -->
 
-<!-- ================= STORY SECTION START ================= -->
-<section id="story">
-  <div class="story-inner">
-    <div class="story-text">
-      <h2>Finding your way home — to yourself, with others.</h2>
-
-      <p>
-        <strong>The Gathering</strong> is a one-stop online platform for women seeking balance, purpose and belonging. 
-        Our mission is to empower ambitious, high-performing individuals who often feel anxious, disconnected or overwhelmed —
-        by creating a safe environment where they can <strong>co-work, co-learn and co-live</strong> with others on the same journey.
-      </p>
-
-      <p>
-        Inside The Gathering, members will find:
-      </p>
-
-      <ul>
-        <li><strong>Caves</strong> — guided virtual co-working sessions led by trained hosts for deep focus and accountability.</li>
-        <!-- <li><strong>The Lounge</strong> — a 24-hour drop-in space to stay connected between sessions.</li> -->
-        <!-- <li><strong>Workshops & Bonus Caves</strong> — live themed gatherings for learning and self-care.</li> -->
-        <li><strong>Resources</strong> — a growing marketplace of templates, prompts, courses and tools.</li>
-        <li><strong>Community Forum & Directory</strong> — to find collaborators, mentors and expert support.</li>
-      </ul>
-
-      <p>
-        At its heart, The Gathering is about <strong>self-compassion through connection</strong> —
-        a digital sanctuary for women to grow, heal and thrive together.
-      </p>
-
-      <button class="cta-btn">Join Our Community</button>
-    </div>
-
-    <div class="story-image">
-      <img src="assets/BrandmarkMidnightBlack.png" alt="The Gathering Brandmark" />
-    </div>
-  </div>
-</section>
-<!-- ================= STORY SECTION END ================= -->
-
 <!-- ================= STORY 1 SECTION START ================= -->
 <section id="story1" class="story-page">
   <div class="story-content">
@@ -139,6 +100,54 @@
   <div class="scroll-hint">↓</div>
 </section>
 <!-- ================= STORY 3 SECTION END ================= -->
+
+<!-- ================= STORY 4 SECTION START ================= -->
+<section id="story4" class="story-page story4-features">
+  <div class="story4-header">
+    <div class="story4-logo">
+      <img src="assets/BrandmarkWhite.png" alt="The Gathering Logo" />
+    </div>
+    <h1>The Gathering</h1>
+  </div>
+  
+  <div class="features-grid">
+    <!-- Feature 1 -->
+    <div class="feature-card">
+      <div class="feature-image">
+        <img src="assets/feature1.jpg" alt="Body-Doubling Sessions" />
+      </div>
+      <div class="feature-content">
+        <h3>Weekly Guided Body-Doubling Sessions</h3>
+        <p>Weekly guided virtual co-working sessions led by trained hosts for deep focus and accountability.</p>
+      </div>
+    </div>
+    
+    <!-- Feature 2 -->
+    <div class="feature-card">
+      <div class="feature-image">
+        <img src="assets/feature2.jpg" alt="The Library" />
+      </div>
+      <div class="feature-content">
+        <h3>The Library</h3>
+        <p>A knowledge base containing free to paid digital resources and references from evergreen to seasonal.</p>
+      </div>
+    </div>
+    
+    <!-- Feature 3 -->
+    <div class="feature-card">
+      <div class="feature-image">
+        <img src="assets/feature3.jpg" alt="Directory" />
+      </div>
+      <div class="feature-content">
+        <h3>International Directory of Vetted Service Providers</h3>
+        <p>Find experts, mentors and collaborators for your diverse and unique needs.</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="scroll-hint">↓</div>
+</section>
+<!-- ================= STORY 4 SECTION END ================= -->
 
   <!-- ================= WAITLIST SECTION START ================= -->
   <section id="waitlist">
