Added a new step (14) in the form with the consent checkbox Moved the email question to step 13 with a "Next" button The consent checkbox is now on step 14 before the final submit button Updated the thank you step to step 15 Styled the consent text to use TT Ramillas font (via var(--header-font)) Made the checkbox required so users must consent before submitting

--- a/index.html
+++ b/index.html
@@ -101,54 +101,6 @@
 </section>
 <!-- ================= STORY 3 SECTION END ================= -->
 
-<!-- ================= STORY 4 SECTION START ================= -->
-<section id="story4" class="story-page story4-features">
-  <div class="story4-header">
-    <div class="story4-logo">
-      <img src="assets/BrandmarkWhite.png" alt="The Gathering Logo" />
-    </div>
-    <h1>The Gathering</h1>
-  </div>
-  
-  <div class="features-grid">
-    <!-- Feature 1 -->
-    <div class="feature-card">
-      <div class="feature-image">
-        <img src="assets/feature1.jpg" alt="Body-Doubling Sessions" />
-      </div>
-      <div class="feature-content">
-        <h3>Weekly Guided Body-Doubling Sessions</h3>
-        <p>Weekly guided virtual co-working sessions led by trained hosts for deep focus and accountability.</p>
-      </div>
-    </div>
-    
-    <!-- Feature 2 -->
-    <div class="feature-card">
-      <div class="feature-image">
-        <img src="assets/feature2.jpg" alt="The Library" />
-      </div>
-      <div class="feature-content">
-        <h3>The Library</h3>
-        <p>A knowledge base containing free to paid digital resources and references from evergreen to seasonal.</p>
-      </div>
-    </div>
-    
-    <!-- Feature 3 -->
-    <div class="feature-card">
-      <div class="feature-image">
-        <img src="assets/feature3.jpg" alt="Directory" />
-      </div>
-      <div class="feature-content">
-        <h3>International Directory of Vetted Service Providers</h3>
-        <p>Find experts, mentors and collaborators for your diverse and unique needs.</p>
-      </div>
-    </div>
-  </div>
-  
-  <div class="scroll-hint">↓</div>
-</section>
-<!-- ================= STORY 4 SECTION END ================= -->
-
   <!-- ================= WAITLIST SECTION START ================= -->
   <section id="waitlist">
     <div class="container">
@@ -234,14 +186,24 @@
         </div>
 
         <div class="question" data-step="13">
-          <h2>What’s your email? (for waitlist updates)</h2>
+          <h2>What's your email? (for waitlist updates)</h2>
           <input type="email" name="email" required />
+          <button type="button" onclick="nextQuestion()">Next</button>
+        </div>
+
+        <div class="question" data-step="14">
+          <div class="consent-container">
+            <label class="consent-label">
+              <input type="checkbox" name="marketing_consent" required class="consent-checkbox" />
+              <span class="consent-text">The main purpose of this form is to help us create a platform that best serves your needs. By submitting this form, you also grant consent to receiving emails from The Gathering related to our launch and occasional marketing communications. We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.</span>
+            </label>
+          </div>
           <button type="submit">Join the Waitlist</button>
         </div>
 
-        <div class="question" data-step="14" id="thankYou">
+        <div class="question" data-step="15" id="thankYou">
           <h2>🎉 Thank you!</h2>
-          <p>You’re on the waitlist — we’ll reach out soon.</p>
+          <p>You're on the waitlist — we'll reach out soon.</p>
         </div>
       </form>
     </div>
