--- a/index.html
+++ b/index.html
@@ -185,20 +185,11 @@
         <div class="question" data-step="13">
           <h2>What's your email? (for waitlist updates)</h2>
           <input type="email" name="email" required />
-          <button type="button" onclick="nextQuestion()">Next</button>
-        </div>
-
-        <div class="question" data-step="14">
-          <div class="consent-container">
-            <label class="consent-label">
-              <input type="checkbox" name="marketing_consent" required class="consent-checkbox" />
-              <span class="consent-text">The main purpose of this form is to help us create a platform that best serves your needs. By submitting this form, you also grant consent to receiving emails from The Gathering related to our launch and occasional marketing communications. We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.</span>
-            </label>
-          </div>
+          <p class="fine-print">The main purpose of this form is to help us create a platform that best serves your needs. By submitting this form, you also grant consent to receiving emails from The Gathering related to our launch and occasional marketing communications. We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.</p>
           <button type="submit">Join the Waitlist</button>
         </div>
 
-        <div class="question" data-step="15" id="thankYou">
+        <div class="question" data-step="14" id="thankYou">
           <h2>🎉 Thank you!</h2>
           <p>You're on the waitlist — we'll reach out soon.</p>
         </div>
