--- a/index.html
+++ b/index.html
@@ -104,10 +104,18 @@
       <div class="progress"><div class="progress-bar" id="progress"></div></div>
 
       <form id="waitlistForm">
-        <!-- Intro Screen -->
+        <!-- New Intro Screen -->
         
         <div class="question active" data-step="1">
-          <h2>Join our waitlist by answering a few simple questions.<br>Estimated time: 5 minutes.</h2>
+          <h2>The Gathering — Waitlist</h2>
+          <p>
+            The main purpose of this form is to help us create a platform that best serves your needs for our private beta launch.
+            We will only be opening the launch to 30 members so the faster and more complete your survey, the higher you get on the list!
+          </p>
+          <p>
+            By submitting this form, you also consent to receiving emails from The Gathering related to our launch and occasional marketing communications.
+            We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.
+          </p>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
@@ -319,7 +327,6 @@
         <div class="question" data-step="24">
           <h2>Anything else you'd like to add?</h2>
           <textarea name="other_info" placeholder="Share any final thoughts..."></textarea>
-          <p class="fine-print">The main purpose of this form is to help us create a platform that best serves your needs. By submitting this form, you also grant consent to receiving emails from The Gathering related to our launch and occasional marketing communications. We're a huge advocate of self-care and self-agency—please unsubscribe if and when our communications are no longer serving you, using the link in our emails.</p>
           <button type="submit">Join the Waitlist</button>
         </div>
 
