--- a/survey.html
+++ b/survey.html
@@ -68,7 +68,7 @@
         <div class="question" data-step="6">
           <h3 class="section-title">Section 2: Your Needs</h3>
           <h2>Which of these needs most align with you at this stage of your life? (You may pick up to 3 and/or add an option that is not provided below)</h2>
-          <div class="checkbox-group">
+          <div class="checkbox-group" id="needsGroup">
             <label><input type="checkbox" name="needs" value="Body-doubling/the presence of another person when struggling with task(s)" /> Body-doubling/the presence of another person when struggling with task(s)</label>
             <label><input type="checkbox" name="needs" value="Focused accountability (Single and/or group)" /> Focused accountability (Single and/or group)</label>
             <label><input type="checkbox" name="needs" value="Encouragement" /> Encouragement</label>
@@ -86,7 +86,7 @@
 
         <div class="question" data-step="7">
           <h2>Which of these types of tasks do you struggle with most? Pick top 3, including an option you don't see in the list, which you can describe under "Other" *</h2>
-          <div class="checkbox-group">
+          <div class="checkbox-group" id="tasksGroup">
             <label><input type="checkbox" name="struggle_tasks" value="Home care tasks (domestic chores like doing the laundry, cleaning, decluttering)" /> Home care tasks (domestic chores like doing the laundry, cleaning, decluttering)</label>
             <label><input type="checkbox" name="struggle_tasks" value="Self-care tasks (like exercise, diet, rest)" /> Self-care tasks (like exercise, diet, rest)</label>
             <label><input type="checkbox" name="struggle_tasks" value="Daily routines (morning routine; nighttime routine)" /> Daily routines (morning routine; nighttime routine)</label>
@@ -186,7 +186,7 @@
 
         <div class="question" data-step="20">
           <h2>Which of these times are you most likely able to get time to yourself or be least distracted? (Answer in respect to your own timezone. You may select all that's relevant or simply select the 'Flexible' option. If you have alternative arrangements, feel free to elaborate under "Other") *</h2>
-          <div class="checkbox-group">
+          <div class="checkbox-group" id="availabilityGroup">
             <label><input type="checkbox" name="availability" value="Weekday mornings" /> Weekday mornings</label>
             <label><input type="checkbox" name="availability" value="Weekday afternoons" /> Weekday afternoons</label>
             <label><input type="checkbox" name="availability" value="Weekday evenings" /> Weekday evenings</label>
