--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="container">
       <div class="progress"><div class="progress-bar" id="progress"></div></div>
 
-      <form id="waitlistForm">
+      <form id="waitlistForm" novalidate>
         <!-- New Intro Screen -->
         
         <div class="question active" data-step="1">
