--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <div class="question" data-step="5">
           <h2>What's your current working status / occupation?</h2>
-          <input type="text" name="Current working status or occupation" list="occupationList" placeholder="Select or type" required />
+          <input type="text" name="occupation" list="occupationList" placeholder="Select or type" required />
           <datalist id="occupationList">
             <option value="Student">
             <option value="Intern">
@@ -159,14 +159,14 @@
 
         <div class="question" data-step="6">
           <h2>Which country are you based in?</h2>
-          <input type="text" name="Which country are you based in? (You may name more than 1 if you travel often.)" list="countryList" placeholder="Select or type your country" required />
+          <input type="text" name="country" list="countryList" placeholder="Select or type your country" required />
           <datalist id="countryList"></datalist>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="7">
           <h2>What's your relationship / family status?</h2>
-          <select name="What is your current relationship and family status?" required>
+          <select name="relationship" required>
             <option value="">Select one</option>
             <option value="Single">Single</option>
             <option value="Married / Long-term relationship">Married / Long-term relationship</option>
@@ -193,9 +193,8 @@
             <label><input type="checkbox" name="needs[]" value="Professional advice & guidance"><span>Professional advice & guidance</span></label>
             <label><input type="checkbox" name="needs[]" value="Access to gender-specific educational resources"><span>Access to gender-specific educational resources</span></label>
             <label><input type="checkbox" name="needs[]" value="Access to gender-specific services"><span>Access to gender-specific services</span></label>
-            <label><input type="checkbox" name="needs[]" value="Other" id="needsOtherCheckbox"><span>Other</span></label>
+            <label><input type="checkbox" name="needs[]" value="Other"><span>Other</span></label>
           </div>
-          <input type="text" name="needs_other" id="needsOtherText" placeholder="Please specify..." style="display:none; margin-top: 1rem;" />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
@@ -206,36 +205,35 @@
             <label><input type="checkbox" name="tasks[]" value="Self-care tasks (exercise, diet, rest, etc.)"><span>Self-care tasks (exercise, diet, rest, etc.)</span></label>
             <label><input type="checkbox" name="tasks[]" value="Daily routines (morning routine, nighttime routine, etc.)"><span>Daily routines (morning routine, nighttime routine, etc.)</span></label>
             <label><input type="checkbox" name="tasks[]" value="Work productivity"><span>Work productivity</span></label>
-            <label><input type="checkbox" name="tasks[]" value="Other" id="tasksOtherCheckbox"><span>Other</span></label>
+            <label><input type="checkbox" name="tasks[]" value="Other"><span>Other</span></label>
           </div>
-          <input type="text" name="tasks_other" id="tasksOtherText" placeholder="Please specify..." style="display:none; margin-top: 1rem;" />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="10">
           <h2>Which of our primary features most interest you — and why?</h2>
-          <textarea name="Which of our primary features most interest you and why?" placeholder="Tell us what interests you and why..." required></textarea>
+          <textarea name="primary_features_why" placeholder="Tell us what interests you and why..." required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="11">
           <h2>Which of our secondary (coming soon) features most interest you — and why?</h2>
-          <textarea name="Which of our secondary (coming soon) features most interest you and why?" placeholder="Tell us what interests you and why..."></textarea>
+          <textarea name="secondary_features_why" placeholder="Tell us what interests you and why..."></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="12">
           <h2>What features would you like to see that aren't here — and why?</h2>
-          <textarea name="What features would you like to see that's not here (or anywhere else) and why?" placeholder="Share your ideas..." required></textarea>
+          <textarea name="feature_suggestions" placeholder="Share your ideas..." required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="13">
           <h2>Which tier aligns most with you?</h2>
           <div class="radio-group">
-            <label><input type="radio" name="Which of these tiers sounds most aligned to you?" value="Founding Member" required><span>Founding Member — Participant with founding privileges such as unchanged membership forever</span></label>
-            <label><input type="radio" name="Which of these tiers sounds most aligned to you?" value="Community Host" required><span>Community Host — Participant + Host Training & Certification</span></label>
-            <label><input type="radio" name="Which of these tiers sounds most aligned to you?" value="Community Leader" required><span>Community Leader — Participant + Host Training & Certification + Listed Service Provider/Collaborator</span></label>
+            <label><input type="radio" name="tier" value="Founding Member" required><span>Founding Member — Participant with founding privileges such as unchanged membership forever</span></label>
+            <label><input type="radio" name="tier" value="Community Host" required><span>Community Host — Participant + Host Training & Certification</span></label>
+            <label><input type="radio" name="tier" value="Community Leader" required><span>Community Leader — Participant + Host Training & Certification + Listed Service Provider/Collaborator</span></label>
           </div>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
@@ -245,40 +243,40 @@
         <div class="question" data-step="14">
           <h2>Do you know what virtual co-working is?</h2>
           <div class="radio-group">
-            <label><input type="radio" name="Do you know what virtual co-working is? (If yes, skip to Section 3. If no, skip to Section 4)" value="Yes" onclick="branchYes()" required><span>Yes</span></label>
-            <label><input type="radio" name="Do you know what virtual co-working is? (If yes, skip to Section 3. If no, skip to Section 4)" value="No" onclick="branchNo()" required><span>No</span></label>
+            <label><input type="radio" name="knows_coworking" value="Yes" onclick="branchYes()" required><span>Yes</span></label>
+            <label><input type="radio" name="knows_coworking" value="No" onclick="branchNo()" required><span>No</span></label>
           </div>
         </div>
 
         <div class="question" data-step="15">
           <h2>Describe your understanding</h2>
-          <textarea name="Briefly describe what your understanding of virtual co-working is in your own words." placeholder="What do you know about virtual co-working?" required></textarea>
+          <textarea name="cw_understanding" placeholder="What do you know about virtual co-working?" required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="16">
           <h2>Where have you experienced virtual co-working before?</h2>
-          <textarea name="Where have you experienced virtual co-working before? Name the platforms and/or nature of the experience where appropriate." placeholder="List platforms or communities..." required></textarea>
+          <textarea name="cw_where" placeholder="List platforms or communities..." required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="17">
           <h2>What did you like?</h2>
-          <textarea name="What do/did you like about your experience(s)?" placeholder="Share what worked well for you..." required></textarea>
+          <textarea name="cw_like" placeholder="Share what worked well for you..." required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="18">
           <h2>What did you find lacking?</h2>
-          <textarea name="What do/did you find lacking in your experience?" placeholder="What could have been better?" required></textarea>
+          <textarea name="cw_lacking" placeholder="What could have been better?" required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="19">
           <h2>Were you a paying member?</h2>
           <div class="radio-group">
-            <label><input type="radio" name="Have you been or are you currently a paying member of the abovementioned coworking platform(s)?" value="Yes" required><span>Yes</span></label>
-            <label><input type="radio" name="Have you been or are you currently a paying member of the abovementioned coworking platform(s)?" value="No" required><span>No</span></label>
+            <label><input type="radio" name="cw_paid" value="Yes" required><span>Yes</span></label>
+            <label><input type="radio" name="cw_paid" value="No" required><span>No</span></label>
           </div>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
@@ -287,13 +285,13 @@
         
         <div class="question" data-step="20">
           <h2>List your worries entering the new year.</h2>
-          <textarea name="List all your worries entering into the new calendar year." placeholder="Share what's on your mind..." required></textarea>
+          <textarea name="worries" placeholder="Share what's on your mind..." required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="21">
           <h2>List your goals entering the new year.</h2>
-          <textarea name="List all your goals and/or aspirations entering into the new calendar year." placeholder="What do you want to achieve?" required></textarea>
+          <textarea name="goals" placeholder="What do you want to achieve?" required></textarea>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
@@ -308,9 +306,8 @@
             <label><input type="checkbox" name="times[]" value="Weekend afternoons"><span>Weekend afternoons</span></label>
             <label><input type="checkbox" name="times[]" value="Weekend nights"><span>Weekend nights</span></label>
             <label><input type="checkbox" name="times[]" value="Flexible"><span>Flexible</span></label>
-            <label><input type="checkbox" name="times[]" value="Other" id="timesOtherCheckbox"><span>Other</span></label>
+            <label><input type="checkbox" name="times[]" value="Other"><span>Other</span></label>
           </div>
-          <input type="text" name="times_other" id="timesOtherText" placeholder="Please specify..." style="display:none; margin-top: 1rem;" />
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
@@ -319,17 +316,17 @@
         <div class="question" data-step="23">
           <h2>How much would you be happy to pay monthly for the primary features?</h2>
           <div class="radio-group">
-            <label><input type="radio" name="How much would you be happy to pay monthly for the primary features?" value="35–45" required><span>35–45</span></label>
-            <label><input type="radio" name="How much would you be happy to pay monthly for the primary features?" value="46–50" required><span>46–50</span></label>
-            <label><input type="radio" name="How much would you be happy to pay monthly for the primary features?" value="51–60" required><span>51–60</span></label>
-            <label><input type="radio" name="How much would you be happy to pay monthly for the primary features?" value="I'm content with a free membership with limited access" required><span>I'm content with a free membership with limited access</span></label>
+            <label><input type="radio" name="pricing" value="35–45" required><span>35–45</span></label>
+            <label><input type="radio" name="pricing" value="46–50" required><span>46–50</span></label>
+            <label><input type="radio" name="pricing" value="51–60" required><span>51–60</span></label>
+            <label><input type="radio" name="pricing" value="I'm content with a free membership with limited access" required><span>I'm content with a free membership with limited access</span></label>
           </div>
           <button type="button" onclick="nextQuestion()">Next</button>
         </div>
 
         <div class="question" data-step="24">
           <h2>Anything else you'd like to add?</h2>
-          <textarea name="Anything else you'd like to add?" placeholder="Share any final thoughts..."></textarea>
+          <textarea name="other_info" placeholder="Share any final thoughts..."></textarea>
           <button type="submit">Join the Waitlist</button>
         </div>
 
